# zad5_3-GrzegorzWojnarowicz

./: CMakeLists.txt  Doxyfile.in  README.md
data/: HexModel.txt  board.txt  coneBlock.txt  coneBlock1.txt  coneBlock10.txt  coneBlock2.txt  coneBlock5.txt  coneBlock6.txt  coneBlock8.txt  coneModel.txt  cuboidModel.txt  drone0_droneBody.txt  drone0_rotor0.txt  drone0_rotor1.txt  drone0_rotor2.txt  drone0_rotor3.txt  drone1_deck.txt  drone1_rotor0.txt  drone1_rotor1.txt  drone1_rotor2.txt  drone1_rotor3.txt  prismBlock.txt  prismBlock10.txt  prismBlock5.txt  prismBlock6.txt  prismBlock7.txt  prismBlock8.txt  prismBlock9.txt  prismModel.txt  wedgeBlock.txt  wedgeBlock5.txt  wedgeBlock6.txt  wedgeBlock9.txt  wedgeModel.txt
doc/html/: _cone_8h_source.html  _constants_8h_source.html  _cuboid_8h_source.html  _drone_8h_source.html  _hex_8h_source.html  _matrix3x3_8h_source.html  _matrix4x4_8h_source.html  _matrix_8h_source.html  _object_8h_source.html  _prism_8h_source.html  _vector3_d_8h_source.html  _vector_8h_source.html  _wedge_8h_source.html  annotated.html  class_cone-members.html  class_cone.html  class_cuboid-members.html  class_cuboid.html  class_drone-members.html  class_drone.html  class_hex-members.html  class_hex.html  class_matrix-members.html  class_matrix.html  class_matrix3x3-members.html  class_matrix3x3.html  class_matrix4x4-members.html  class_matrix4x4.html  class_object-members.html  class_object.html  classes.html  (+20 more)
inc/: Cone.h  Constants.h  Cuboid.h  Drone.h  Hex.h  Matrix.h  Matrix3x3.h  Matrix4x4.h  Object.h  Prism.h  Vector.h  Vector3D.h  Wedge.h  scene.h
src/: Cone.cpp  Cuboid.cpp  Drone.cpp  Hex.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Object.cpp  Prism.cpp  Vector3D.cpp  Wedge.cpp  main.cpp  scene.cpp
tst/: CMakeLists.txt  Formula-test.cpp
(+62 files in other folders)
